# global_store_pipeline

./: .gitignore  README.md  bootstrap.sh  main.py  pyproject.toml
airflow_home/: standalone_admin_password.txt
dags/: dag_bronze_extract.py  dag_check_connection.py  dag_load.py  dag_setup_db.py  dag_silver_transform.py  global_store_dag.py
src/: api_client.py  db_manager.py  init_db.py  transform.py  utils.py
